app/styles/lforms.css
/* ... */
.lf-form input[type=number] {
  -moz-appearance:textfield;
}

/* Keep the font-weight on the questions normal */
.lf-form label {
  font-weight: normal;
  margin-bottom: 0;
}

/* form title */
.lf-form-title {
  background-color: #458AC5;
  color: #FFF;
  overflow: hidden;
  padding: 8px;
  margin: 4px 0;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
.lf-form-title a {
  color: #FFFFFF;
}
.lf-form-title .lf-question {
  font-size: 120%;
}

/* lf-form-header */

/* table structure in the forms */
.lf-form table {
  /*border-collapse: collapse;*/
  padding: 0;
  width: 100%;
  table-layout: fixed;
}

.lf-form-table {
  /*border: 1px solid #73A0C8;*/
}


/* input fields */
.lf-form input[type="text"],
.lf-form input[type="number"] {
  border: 1px solid #ced5d9 ;
  width: 100%;
  height: 28px;
  min-height: 14px;
  overflow: hidden;
  padding: 2px 2px 2px 4px;
  font-size: 90%;
  font-weight: 700;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
.lf-form textarea {
  border: 1px solid #ced5d9 ;
  width: 100%;
  height: 1em; /* initial height (for firefox)*/
  min-height: 28px;
  overflow: visible;
  padding: 2px 2px 2px 4px;
  font-size: 90%;
  font-weight: 700;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  vertical-align: bottom; /* remove the extra padding at the bottom of the containing div. */
  /*display:block; !* remove the extra padding at the bottom of the containing div. (solution #2) *!*/
  resize: vertical; /* not allow user to change width */

}
.lf-form input:focus {
  background-color: #FFF8C6
}

/* buttons in tables */
.lf-de-button {
  width: 22px;
}
.lf-form button {
  border: 0 none;
  cursor: pointer;
  overflow: visible;
  padding: 0;
  position: relative;
  background-color: #066aa0; /*#458AC5;*/
}
.lf-form .lf-float-button {
  min-width: 22px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  font-weight: bold;
  color: white;
  padding: 1px;
}
.lf-form .lf-help-button,
.lf-form .lf-control-button,
.lf-form .lf-copyright-button {
  font-size: 120%;
  font-weight: bold;
  padding: 0;
  margin-right: 2px;
  margin-left:2px;
  vertical-align: middle;
  background-color: inherit;
  color: #066aa0; /*#458AC5;*/
}
.lf-form .lf-help-button:hover,
.lf-form .lf-control-button:hover,
.lf-form .lf-copyright-button:hover {
  color: #0087fd;
}
.lf-form .lf-form-title .lf-help-button,
.lf-form .lf-form-title .lf-control-button,
.lf-form .lf-form-title .lf-copyright-button {
  background-color: inherit;
  color: white;
}
.lf-form .lf-form-title .lf-help-button:hover,
.lf-form .lf-form-title .lf-control-button:hover,
.lf-form .lf-form-title .lf-copyright-button:hover {
  color: #b4fda7;
}


.lf-form-title .popover {
  color: #333333;
}

/* name field */
.lf-form .lf-de-label span.lf-prompt {
  font-style: italic;
  font-size: 75%;
}
.lf-form .lf-de-label span.lf-sn{
  -moz-border-radius: 4px;
  border-radius: 4px;
  background-color: #066aa0;
  font-weight: bold;
  color: white;
  padding: 4px 8px;
}
.lf-form .lf-de-label span.lf-question{
  padding: 0 2px 0 2px;
}

/* form stop sign */
.lf-form .stopped {
  text-align: center;
  width:500px;
  height: 50px;
  margin-left: 30%;
  margin-right: 30%;
  margin-bottom: 20px;
  vertical-align: top;
}
.lf-form .stopped span {
  font-size: 300%;
  vertical-align: top;
  color: red;
}
.lf-form .stop-sign {
  background-image: url("../images/signal-stop.png");
  background-repeat: no-repeat;
  background-position: left center;
  width: 48px;
  height: 48px; /*100%; */
}

/* html5 tooltip style */
.lf-form input:-moz-placeholder,
.lf-form textarea:-moz-placeholder {
  font-size: 14px;
  font-weight: 400;
  color: #999999;
  opacity: 1;
}
/* Repeat for IE 11, which won't read this definition if it is combined above
   with -moz-placeholder */
.lf-form input:-ms-input-placeholder,
.lf-form textarea:-ms-input-placeholder {
  font-size: 14px;
  font-weight: 400;
  color: #999999;
  opacity: 1;
}

/* date picker */
.lf-form-item-data .ui-datepicker {
  font-size: 80%;
}
.lf-form-item-data {
  position: relative;
}
.lf-form-item-data .ui-datepicker-trigger {
  position: absolute;
  background: url("../images/calendar.png") no-repeat scroll transparent;
  top: 8px;
  right: 4px;
  width: 16px;
  height: 16px;
  z-index: 10;
}
.lf-form-item-data .ui-datepicker-trigger:hover {
  background-image: url("../images/calendar-hover.png");
}

/* active row */
.lf-form-table-row.active-row {
  background-color: #AFEEEE;
}

/* units */
.lf-form input.units {
  color: #333333;
  font-weight: 400;
}

/* restore autocomplete default styles */
.lf-form input.ansList,  .lf-form input.search_field {
  padding-right: 14px;
}


/* borders for invalid fields */
.lf-form input.ng-invalid.ng-dirty,
.lf-form div.ng-invalid.ng-dirty {
  border: 2px solid #FF0000;
}

/* validations messages for invalid fields */
.lf-form .hasTooltip {
  overflow: visible;
}
.lf-form .tooltipContent {
  display: none;
}
.lf-form .lf-visited-before .ng-invalid > .tooltipContainer:hover .tooltipContent,
.lf-form .active-row.lf-visited-before .ng-invalid > .tooltipContainer .tooltipContent,
.lf-form .lf-show-validation .ng-invalid > .tooltipContainer .tooltipContent {
  border-radius: 6px;
  bottom: 35px;
  background-color: #fcf8e3;
  left: 5px;
  padding: 9px 14px;
  position: absolute;
  z-index: 98;
  max-width: 600px;
  width: auto;
  display: block;
  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
  border: 1px solid #eea236;

}
.lf-form .lf-visited-before .ng-invalid > .tooltipContainer:hover:before,
.lf-form .active-row.lf-visited-before .ng-invalid > .tooltipContainer:before,
.lf-form .lf-show-validation .ng-invalid > .tooltipContainer:before {
  border: solid;
  border-color: #fcf8e3 transparent;
  border-width: 11px 11px 0 11px;
  bottom: 25px;
  content: "";
  left: 15px;
  position: absolute;
  z-index: 99;
}
/* ... */

